Add LLD/OOD subpages and sources

--- a/src/content/docs/study-in-public-note/lld/introduction.mdx
+++ b/src/content/docs/study-in-public-note/lld/introduction.mdx
@@ -4,8 +4,9 @@ description: How to approach LLD / OOD interviews and what interviewers expect.
 template: doc
 ---
 
-- Typical format: 35–40 minutes to design a small Java implementation (interfaces, classes, fields, methods, relationships).
+- Typical format: 35–40 minutes to design an OOD implementation (interfaces, classes, fields, methods, relationships).
 - Clarify each class’s responsibilities and boundaries before coding. Ask questions, then design for encapsulation, inheritance, polymorphism, and abstraction. Be ready to describe relationships (a quick UML-style sketch verbally is fine even if you don’t draw).
+- Source: Adapted from https://www.hellointerview.com/learn/low-level-design/in-a-hurry/introduction
 
 Reference visuals:
 
