--- a/src/content/docs/study-in-public-note/lld/delivery-framework.mdx
+++ b/src/content/docs/study-in-public-note/lld/delivery-framework.mdx
@@ -4,6 +4,8 @@ description: A step-by-step flow for LLD/OOD interviews with example prompts.
 template: doc
 ---
 
+> Source: Adapted from https://www.hellointerview.com/learn/low-level-design/in-a-hurry/delivery
+
 ## 1) Requirements (~5 minutes)
 
 - **Primary capabilities** — What operations must this system support?
@@ -95,7 +97,7 @@ makeMove(player, row, col):
 
 - Verification: take 1–2 minutes to dry run with sample inputs.
 
-## 5) Extensibility (~5 minutes if time)
+## 5) Extensibility (~5 minutes if have time)
 
 - Tailor depth to level (junior: none, mid: a couple, senior: more).
 - Example: adding **undo**
